@@ -19,9 +19,11 @@ issues = 1
 :version = 1.14000001
 
 [MetaData::BuiltWith / @Author::KENTNL/MetaData::BuiltWith]
+:version = 1.004000
 show_config = 1
 show_uname = 1
 uname_args = -s -o -r -m -i
+use_external_file = only
 
 [Git::Contributors / @Author::KENTNL/Git::Contributors]
 :version = 0.006
@@ -43,6 +45,9 @@ include_dotfiles = 1
 [MetaYAML / @Author::KENTNL/MetaYAML]
 
 [Manifest / @Author::KENTNL/Manifest]
+
+[Author::KENTNL::TravisCI / @Author::KENTNL/Author::KENTNL::TravisCI]
+:version = 0.001002
 
 [CopyFilesFromBuild / @Author::KENTNL/CopyXBuild]
 copy = LICENSE
@@ -81,7 +86,7 @@ replacer = replace_with_blank
 -phase = develop
 -type = suggests
 Dist::Zilla::App::Command::bakeini = 0.001000
-Dist::Zilla::PluginBundle::Author::KENTNL = 2.022000
+Dist::Zilla::PluginBundle::Author::KENTNL = 2.024001
 
 [Prereqs::AuthorDeps / @Author::KENTNL/Prereqs::AuthorDeps]
 
@@ -97,9 +102,9 @@ locate_comment = 1
 default_jobs = 10
 
 [Author::KENTNL::RecommendFixes / @Author::KENTNL/Author::KENTNL::RecommendFixes]
-:version = 0.001001
+:version = 0.004002
 
-[ReadmeFromPod / @Author::KENTNL/ReadmeFromPod]
+[Readme::Brief / @Author::KENTNL/ShippedReadme]
 
 [ReadmeAnyFromPod / @Author::KENTNL/ReadmeAnyFromPod]
 filename = README.mkdn
@@ -134,6 +139,7 @@ time_zone = UTC
 allow_dirty_match = ^lib/
 
 [Git::CommitBuild / @Author::KENTNL/Git::CommitBuild]
+branch = builds
 release_branch = releases
 
 [Git::Tag / @Author::KENTNL/tag_release]
@@ -147,9 +153,16 @@ hash_tags = #perl #cpan #distzilla
 tweet_url = https://metacpan.org/release/{{$AUTHOR_UC}}/{{$DIST}}-{{$VERSION}}{{$TRIAL}}#whatsnew
 url_shortener = none
 
-[Prereqs::Recommend::MatchInstalled / @Author::KENTNL/Prereqs::Recommend::MatchInstalled]
-modules = ExtUtils::MakeMaker
-modules = Test::More
+[Prereqs::Upgrade / @Author::KENTNL/Prereqs::Upgrade]
+Dist::Zila::Plugin::MetaProvides::Package = 2.000000
+Dist::Zilla = 5
+ExtUtils::MakeMaker = 7.00
+File::ShareDir::Install = 0.10
+Moo = 1.000008
+Moose = 2.000
+Path::Tiny = 0.058
+Test::File::ShareDir = 1.000000
+Test::More = 0.99
 
 [Prereqs::Recommend::MatchInstalled / @Author::KENTNL/always_latest_develop_bundle]
 applyto_map = develop.suggests = develop.suggests
@@ -161,7 +174,8 @@ modules = Dist::Zilla::App::Command::bakeini
 ; auto_prereqs_skip = File::Find
 -phase = develop
 -relationship = requires
-Dist::Zilla::Plugin::Author::KENTNL::RecommendFixes = 0.001001
+Dist::Zilla::Plugin::Author::KENTNL::RecommendFixes = 0.004002
+Dist::Zilla::Plugin::Author::KENTNL::TravisCI = 0.001002
 Dist::Zilla::Plugin::Authority = 1.006
 Dist::Zilla::Plugin::AutoPrereqs = 0
 Dist::Zilla::Plugin::BumpVersionAfterRelease = 0
@@ -180,7 +194,7 @@ Dist::Zilla::Plugin::MakeMaker = 0
 Dist::Zilla::Plugin::Manifest = 0
 Dist::Zilla::Plugin::ManifestSkip = 0
 Dist::Zilla::Plugin::MetaConfig = 0
-Dist::Zilla::Plugin::MetaData::BuiltWith = 0
+Dist::Zilla::Plugin::MetaData::BuiltWith = 1.004000
 Dist::Zilla::Plugin::MetaJSON = 0
 Dist::Zilla::Plugin::MetaProvides::Package = 1.14000001
 Dist::Zilla::Plugin::MetaTests = 0
@@ -192,8 +206,9 @@ Dist::Zilla::Plugin::PodWeaver = 0
 Dist::Zilla::Plugin::Prereqs = 0
 Dist::Zilla::Plugin::Prereqs::AuthorDeps = 0
 Dist::Zilla::Plugin::Prereqs::Recommend::MatchInstalled = 0
+Dist::Zilla::Plugin::Prereqs::Upgrade = 0
+Dist::Zilla::Plugin::Readme::Brief = 0
 Dist::Zilla::Plugin::ReadmeAnyFromPod = 0
-Dist::Zilla::Plugin::ReadmeFromPod = 0
 Dist::Zilla::Plugin::RewriteVersion::Sanitized = 0
 Dist::Zilla::Plugin::RunExtraTests = 0
 Dist::Zilla::Plugin::Test::CPAN::Changes = 0
@@ -209,3 +224,4 @@ Dist::Zilla::Plugin::UploadToCPAN = 0
 
 [Prereqs]
 ; authordep Pod::Elemental::Transformer::List
+; Mixin::Linewise = != 0.107
