@@ -23,3 +23,4 @@ srcreadme         = mkdn
 
 [Prereqs]
 ; authordep Pod::Elemental::Transformer::List
+; Mixin::Linewise = != 0.107
