@@ -1,6 +1,10 @@
 Release history for Dist-Zilla-Util-ExpandINI
 
 {{$NEXT}}
+ [Dependencies::Stats]
+ - Dependencies changed since 0.003000, see misc/*.deps* for details
+ - develop: +3 ↑3 -1 (recommends: ↓1, suggests: ↑2)
+ - test: (recommends: ↓1)
 
 0.003000 2014-11-08T12:17:58Z 6a88090
  [API]
